--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Flatiron Task Lister</title>
     <link rel="stylesheet" href="./style.css">
+
 </head>
 
 <body>
@@ -13,8 +14,15 @@
 
         <form id="create-task-form" action="" method="POST">
             <label for="new-task-description">Task description:</label>
-            <input type="text" id="new_task_description" name="new-task-description" placeholder="description">
+            <input type="text" id="new_task_description" name="new-task-description" placeholder="description" />
+            <select>
+                <option value="Red" id="R">Red</option>
+                <option id="Y" value="Yellow">Yellow</option>
+                <option id="G" value="Green">Green</option>
+
+            </select>
             <input type="submit" value="submit">
+
         </form>
 
         <div id="list">
